--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
 </head>
 
 <body>
-    <div>
+    <nav>
         <!-- navigation bar -->
-    </div>
-    <div>
+    </nav>
+    <section>
         <!-- hero content -->
         <h1>Bloc Jams</h1>
         <h3>Turn the music up!</h3>
-    </div>
-    <div>
+    </section>
+    <section>
         <!-- selling points -->
 
         <div>
@@ -29,7 +29,7 @@
             <h5>Mobile enabled</h5>
             <p>Listen to your music on the go. This streaming service is available on all mobile platforms.</p>
         </div>
-    </div>
+    </section>
 
 
 
